# auth-microservice

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  appdesc.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: publish-ghrch.yaml
data/: params.yml
src/: __init__.py  cli.py
src/config/: __init__.py  database.py  email.py  settings.py  sms.py  swaggers.py  token.py
src/dependences/: __init__.py  auth.py
src/middleware/: __init__.py  auth.py  functional.py
src/middlewares/: auth.py
src/models/: __init__.py  mixins.py  params.py  roles.py  users.py
src/providers/: base.py
src/providers/firebase/: auth.py
src/providers/local/: auth.py
src/routers/: __init__.py  auth.py  params.py  perms.py  roles.py  users.py
src/schemas/: __init__.py  auth.py  mixins.py  params.py  response.py  roles.py  users.py
src/services/: auth.py  files.py  params.py  perms.py  roles.py  shared.py  tracker.py  users.py
src/services/auth/: __init__.py  auth.py  email.py  phonenumber.py  shared.py
src/shared/: __init__.py  error_codes.py  exceptions.py  scripts.py  send_email.py  send_sms.py  url_patterns.py  utils.py
src/shared/scripts/: cli.py  params.py  roles.py  users.py  utils.py
src/templates/: confirm_account.html  create_account_success.html  reset_password.html  reset_password_completed.html  sms_send_otp.txt
tests/: .test.env  conftest.py  test.env
tests/config/: test_config.py  test_db_config.py
tests/dependences/: test_auth.py
tests/middlewares/: test_auth.py
tests/routers/: test_roles_api.py  test_users_api.py
tests/services/: test_auth.py
